--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,8 @@
 
     <!-- left-content ----------------------------------------------------------------->
     <h1 class="left-content-title">～～～　記事一覧　～～～</h1>
-    
-    <% for(var i in contents) { %>
+    <p><%= contents[1].title %></p>
+    <% for(let i in contents){ %>
       <div class="card">
         <a href="/article?id=<%= contents[i].id %>"></a>
         <div class="card-title"><%= contents[i].title %></div>
