--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,10 @@
 
     <!-- left-content ----------------------------------------------------------------->
     <h1 class="left-content-title">～～～　記事一覧　～～～</h1>
-    <% for(let i in contentss){ %>
+    <% for(let i in contents){ %>
       <div class="card">
         <a href="/article?id=<%= contents[i].id %>"></a>
-        <div class="card-title"><%= contentss[i].title %></div>
+        <div class="card-title"><%= contents[i].title %></div>
         <div class="card-content">
           <div class="card-content-img">
             <img src="<%= contents[i].headerimg %>"> 
