--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,17 +11,16 @@
 
     <!-- left-content ----------------------------------------------------------------->
     <h1 class="left-content-title">～～～　記事一覧　～～～</h1>
-    <% for(let i in contents){ %>
+
       <div class="card">
-        <a href="/article?id=<%= contents[i].id %>"></a>
-        <div class="card-title"><%= contents[i].title %></div>
+        <a href="/article"></a>
+        <div class="card-title">ブログ作成の手順　AWS LightSail + WordPress</div>
         <div class="card-content">
           <div class="card-content-img">
-            <img src="<%= contents[i].headerimg %>"> 
+            <img src="https://tekutekku.com/wp-content/uploads/2021/09/top_makeblog.jpg"> 
           </div>
         </div>
       </div>
-    <% } %>
 
   </body>
 </html>
