--- a/views/manage/login.ejs
+++ b/views/manage/login.ejs
@@ -24,7 +24,7 @@
     </form>
 
     <!-- ユーザーの新規作成 -->
-    <form method="post" action="/manage/login/useradd">
+    <!-- <form method="post" action="/manage/login/useradd">
       <div class="form-group">
         <label for="name">ユーザー名</label>
         <input type="text" name="name" id="name">
@@ -36,7 +36,7 @@
       <div class="form-send-button">
         <input type="submit" value="新規作成">
       </div>
-    </form>
+    </form> -->
 
     
   </body>
