--- a/views/manage/article.ejs
+++ b/views/manage/article.ejs
@@ -66,11 +66,19 @@
         el.setAttribute("checked","checked")
       }
 
+      // 記事削除の確認
       function articledelete(){
         let judge = confirm("記事を削除して良いですか")
         if (judge == true){
           var xhr = new XMLHttpRequest();
           console.log('はいが押されました')
+          xhr.open('POST',"http://localhost:3000/manage/delete?id=" + <%=form.id%>)
+          console.log("http://localhost:3000/manage/delete?id=" + <%=form.id%>)
+          xhr.setRequestHeader('content-type', 'application/x-www-form-urlencoded');
+          xhr.send("string");
+
+          // delete後に画面遷移する
+          window.location.href = 'http://localhost:3000/manage'
         }
       }
     </script>
