add googleanalytics tag

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <% include('components/google-analytics-code') %>
+
     <link rel="stylesheet" href="/stylesheets/reset.css" />
     <link rel="stylesheet" href="/stylesheets/layout.css" />
     <title>日々ノート</title>
@@ -28,7 +30,7 @@
 
       <!-- right-content ----------------------------------->
       <div class="right-contents">
-    <!--  ↓  <%-  %>にすると右再度バー出現！ -->
+    <!--  ↓  <%-  %>にすると右サイドバー出現！ -->
         <% include('components/right-contents') %>
       </div>
     </div>
