--- a/views/components/google-analytics-code.ejs
+++ b/views/components/google-analytics-code.ejs
@@ -5,7 +5,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
   
-  ga('create', 'G-D9DGBNPV3J', 'auto');
+  ga('create', 'UA-XXXXX-Y', 'auto');
   ga('send', 'pageview');
 </script>
 <!-- End Google Analytics -->
