--- a/views/components/google-analytics-code.ejs
+++ b/views/components/google-analytics-code.ejs
@@ -1,5 +1,15 @@
-<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics 参考：https://support.google.com/analytics/answer/1008080?hl=ja&visit_id=637890272820029147-2340217469&rd=1#zippy=%2C%E3%81%93%E3%81%AE%E8%A8%98%E4%BA%8B%E3%81%AE%E5%86%85%E5%AE%B9 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D9DGBNPV3J"></script>
 <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-D9DGBNPV3J');
+</script>
+
+<!-- Google Analytics -->
+<!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -7,5 +17,5 @@
   
   ga('create', 'UA-XXXXX-Y', 'auto');
   ga('send', 'pageview');
-</script>
+</script> -->
 <!-- End Google Analytics -->
