--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="/stylesheets/reset.css" />
     <link rel="stylesheet" href="/stylesheets/layout.css" />
+    <link rel='stylesheet' href='/stylesheets/index.css' />
+    <link rel='stylesheet' href='/stylesheets/article.css' />
     <title>日々ノート</title>
   </head>
   <body>
