fix routing after article delete

--- a/views/manage/article.ejs
+++ b/views/manage/article.ejs
@@ -82,7 +82,7 @@
           xhr.send("string");
 
           // delete後に画面遷移する
-          window.location.href = '/'
+          window.location.href = '/manage'
         }
       }
     </script>
