--- a/public/stylesheets/article.css
+++ b/public/stylesheets/article.css
@@ -201,11 +201,28 @@ footer {
 }
 
 .article-content ul {
-  margin: 30px 0;
+  margin-top: 10px;
+  margin-bottom: 30px;
   padding: 20px 10px;
   line-height: 40px;
   background-color: rgba(0, 0, 112, 0.08);
   border: 3px solid #000070;
+}
+
+.article-content table {
+  margin-top: 10px;
+  margin-bottom: 80px;
+  border-collapse: collapse;
+}
+
+.article-content table th {
+  background-color: #000070;
+  color: white;
+}
+
+.article-content table th, .article-content table td {
+  border: solid 1px #000070;
+  padding: 10px;
 }
 
 .article-content span {
