--- a/public/stylesheets/article.scss
+++ b/public/stylesheets/article.scss
@@ -40,13 +40,16 @@
 
   }
   ul{
-    margin: 30px 0;
+    margin-top: 10px;
+    margin-bottom: 30px;
     padding: 20px 10px;
     line-height: $font-size-small*2.5;
     background-color: rgba(0,0,112,0.08);
     border: 3px solid $layout-bg-color;
   }
   table{
+    margin-top: 10px;
+    margin-bottom: 80px;
     border-collapse: collapse;
     th{
       background-color: #000070;
