--- a/public/stylesheets/article.scss
+++ b/public/stylesheets/article.scss
@@ -54,6 +54,7 @@
     th{
       background-color: #000070;
       color: white;
+      text-align: center;
     }
     th, td{
       border: solid 1px #000070;
