--- a/views/components/right-contents.ejs
+++ b/views/components/right-contents.ejs
@@ -1,18 +1,6 @@
 <!-- 右サイドバー -->
 <div class="right-content">
-  <p class="right-content-title">～過去の記事～</p>
-  <ul>
-    <li>記事１</li>
-    <li>記事２</li>
-    <li>記事３</li>
-    <li>記事１</li>
-    <li>記事２</li>
-    <li>記事３</li>
-    <li>記事１</li>
-    <li>記事２</li>
-    <li>記事３</li>
-    <li>記事１</li>
-    <li>記事２</li>
-    <li>記事３</li>
-  </ul>
+  <p class="right-content-title">このブログについて</p>
+  <p>副業や勉強で日々調べたことをまとめるブログです。</p>
+  <p>１度やったことを２度目はスムーズにできるように、道しるべをこのブログに書いていきます。</p>
 </div>
