--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -1,17 +1,13 @@
-// Sass変数一覧-----------------------------------------------
-$content-size-pc: 1000px;  //レスポンシブ対応　デスクトップ用
-$breakpoint-tab: 992px; //レスポンシブ対応　タブレット(ラップトップ）
-$content-size-tab: 750px; //レスポンシブ対応　幅サイズ
-$breakpoint-sp: 750px; //レスポンシブ対応　スマホ
-$layout-bg-color: rgba(0,0,112,1);
-$font-color: black;
-$font-size-big: 24px;
-$font-size-small: 16px;
-// -----------------------------------------------------------
+@import "variable"; //変数の読み込み
+
+*{
+  box-sizing: border-box;
+}
 
 body{
-  font-family: "游ゴシック", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif, serif;
+  font-family: Noto, "游ゴシック", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif, serif;
   color: $font-color;
+  background-color: #f5f5f5;
   p{
     padding: 5px 0;
   }
@@ -26,6 +22,8 @@ header{
   flex-direction: column;
   align-items: center;
   border-bottom:1px solid #aaa;
+  background-color: $content-bg-color;
+  box-sizing: border-box;
   a{
     text-decoration: none;
     color: $font-color;
@@ -39,10 +37,10 @@ header{
     justify-content: end;
     font-weight: bold;
     @media screen and (max-width: $breakpoint-tab){
-      width: $content-size-tab;
+      width: 640px;
     }
     @media screen and (max-width: $breakpoint-sp){
-      padding: 0 10px;
+      width: 100%;
       text-align: center;
     }
     .header-main-title{
@@ -77,21 +75,43 @@ header{
   justify-content: center;
   @media screen and (max-width: $breakpoint-tab){
     width: $content-size-tab;
+    flex-direction: column;
   }
   @media screen and (max-width: $breakpoint-sp){
+    width: 100%;
     padding: 0 10px;
     flex-direction: column;
   }
   .left-contents{
-    width: 65%;
+    width: 70%;
+    @media screen and (max-width: $breakpoint-tab){
+      margin: 0 auto;
+      width: 640px;
+    }
+    @media screen and (max-width: $breakpoint-sp){
+      margin: 0 auto;
+      width: 100%;
+    }
   }
   .right-contents{
-    padding-left: 30px;
-    width: 35%;
+    padding-left: 5%;
+    width: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and (max-width: $breakpoint-tab){
+      padding: 0;
+      margin: 0 auto;
+      width: 640px;
+    }
+    @media screen and (max-width: $breakpoint-sp){
+      padding: 0;
+      margin: 0 auto;
+      width: 100%;
+    }
     .right-content{
+      padding: 20px;
+      background-color: $content-bg-color;
       .right-content-title{
         font-size: $font-size-big;
         font-weight: bold;
