--- a/public/stylesheets/manage.scss
+++ b/public/stylesheets/manage.scss
@@ -1,10 +1,17 @@
-@import "layout";  //layoutに記載の変数が使用できるようになる。
+@import "variable"; //変数の読み込み
 
 form{
   .form-group{
     margin: 30px 0;
     display: flex;
     flex-direction: column;
+    // @media screen and (max-width: $breakpoint-tab){
+    //   width: $content-size-tab;
+    // }
+    // @media screen and (max-width: $breakpoint-sp){
+    //   padding: 0 10px;
+    //   text-align: center;
+    // }
     input, textarea{
       width: 100%;
       padding: 5px 10px;
