--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,13 @@
 <!-- ブログのトップページ -->
 
 <!-- left-content ----------------------------------------------------------------->
-<h1 class="left-content-title">～～～　記事一覧　～～～</h1>
-
 <% for(let i in contents){ %>
   <div class="card">
     <a href="/article?id=<%= contents[i].id %>"></a>
-    <div class="card-title"><%= contents[i].title %></div>
+    <div class="card-text">
+      <div class="card-text-date"><%= contents[i].date %></div>
+      <div class="card-text-title"><%= contents[i].title %></div>
+    </div>
     <div class="card-content">
       <div class="card-content-img">
         <img src="<%= contents[i].headerimg %>"> 
