fix delete article function

--- a/views/manage/article.ejs
+++ b/views/manage/article.ejs
@@ -55,6 +55,7 @@
     </div>
   </form>
 </div> -->
+<div id="rt-menu-button"></div>
 
 <script>
   // 読み込んだ記事が公開済みならstatusチェックボックスにチェックを入れる
@@ -75,7 +76,7 @@
       xhr.send("string");
 
       // delete後に画面遷移する
-      window.location.href = '/manage'
+      // window.location.href = '/manage'
     }
   }
 </script>
