--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,5 +53,13 @@
     <footer>
       <p>©2022.04.12 All right reserve</p>
     </footer>
+
+    <!-- react関係読み込み ------------------------------------------------------------------------------------->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    
+    <!-- reactコンポーネント -->
+
   </body>
 </html>
