--- a/views/manage/article.ejs
+++ b/views/manage/article.ejs
@@ -70,13 +70,13 @@
     if (judge == true){
       var xhr = new XMLHttpRequest();
       console.log('はいが押されました')
-      xhr.open('POST',"http://localhost:3000/manage/delete?id=" + <%=form.id%>)
-      console.log("http://localhost:3000/manage/delete?id=" + <%=form.id%>)
+      xhr.open('POST',"/manage/delete?id=" + <%=form.id%>)
+      console.log("/manage/delete?id=" + <%=form.id%>)
       xhr.setRequestHeader('content-type', 'application/x-www-form-urlencoded');
       xhr.send("string");
 
       // delete後に画面遷移する
-      // window.location.href = '/manage'
+      window.location.href = '/manage'
     }
   }
 </script>
