fix pegereload after article delete

--- a/views/manage/article.ejs
+++ b/views/manage/article.ejs
@@ -76,8 +76,7 @@
       xhr.send("string");
 
       // delete後に画面遷移する
-      window.location.href = '/manage'
-      window.location.reload();
+      window.location = '/manage'
     }
   }
 </script>
