--- a/views/manage/article.ejs
+++ b/views/manage/article.ejs
@@ -76,8 +76,7 @@
       xhr.send("string");
 
       // delete後に画面遷移する
-      window.location = '/manage'
-      window.location.reload(true);
+      window.location.href = '#/manage'  //ページをリロードしてページ移動
     }
   }
 </script>
