fix pegereload after article delete 5

--- a/views/manage/article.ejs
+++ b/views/manage/article.ejs
@@ -76,7 +76,7 @@
       xhr.send("string");
 
       // delete後に画面遷移する
-      window.location.href = '/manage'
+      window.location.href = 'https://www.knowledge2.site/manage'
     }
   }
 </script>
