--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -60,7 +60,7 @@ header .header-title {
 
 @media screen and (max-width: 992px) {
   header .header-title {
-    width: 640px;
+    width: 750px;
   }
 }
 
@@ -117,7 +117,7 @@ header .header-bottom-bar .header-bottom-bar-line {
 
 @media screen and (max-width: 992px) {
   .contents {
-    width: 640px;
+    width: 750px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -143,7 +143,7 @@ header .header-bottom-bar .header-bottom-bar-line {
 @media screen and (max-width: 992px) {
   .contents .left-contents {
     margin: 0 auto;
-    width: 640px;
+    width: 750px;
   }
 }
 
@@ -155,7 +155,8 @@ header .header-bottom-bar .header-bottom-bar-line {
 }
 
 .contents .right-contents {
-  width: 25%;
+  width: 30%;
+  margin-left: 3%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -172,7 +173,7 @@ header .header-bottom-bar .header-bottom-bar-line {
   .contents .right-contents {
     padding: 0;
     margin: 0 auto;
-    width: 640px;
+    width: 750px;
   }
 }
 
