--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -94,7 +94,8 @@ header{
     }
   }
   .right-contents{
-    width: 25%;
+    width: 30%;
+    margin-left: 3%;
     display: flex;
     flex-direction: column;
     align-items: center;
