--- a/public/stylesheets/manage.scss
+++ b/public/stylesheets/manage.scss
@@ -26,7 +26,8 @@ form{
     }
   }
   .form-send-button{
-    margin: 0 auto;
+    width: 100%;
+    margin: 0px auto;
     padding: 30px;
     background-color: $layout-bg-color;
     color: white;
