--- a/public/stylesheets/article.css
+++ b/public/stylesheets/article.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .article-header .date {
   font-size: 16px;
 }
@@ -22,6 +23,11 @@
   font-size: 16px;
 }
 
+.article-header p {
+  line-height: 32px;
+  margin-bottom: 30px;
+}
+
 .article-content {
   margin: 100px 0;
 }
@@ -32,6 +38,7 @@
 }
 
 .article-content h2 {
+  margin-top: 80px;
   margin-bottom: 30px;
   padding-left: 5px;
   border-left: 12px solid #000070;
@@ -42,9 +49,19 @@
 
 .article-content h3 {
   margin-bottom: 10px;
-  padding-left: 5px;
   font-size: 16px;
+  line-height: 22px;
   font-weight: bold;
+  vertical-align: center;
+}
+
+.article-content h3::before {
+  content: '◆';
+  margin-right: 5px;
+  position: relative;
+  top: calc((22px - 16px)/2);
+  color: #000070;
+  font-size: 22px;
 }
 
 .article-content p {
