--- a/public/stylesheets/article.scss
+++ b/public/stylesheets/article.scss
@@ -19,6 +19,10 @@
   .article-header-img-source{
     font-size: $font-size-small;
   }
+  p{
+    line-height: $font-size-small*2;
+    margin-bottom: 30px;
+  }
 }
 
 .article-content{
@@ -28,6 +32,7 @@
     color: blue;
   }
   h2{
+    margin-top: 80px;
     margin-bottom: 30px;
     padding-left: 5px;
     border-left: 12px solid $layout-bg-color;
@@ -37,14 +42,22 @@
   }
   h3{
     margin-bottom: 10px;
-    padding-left: 5px;
     font-size: $font-size-small;
+    line-height: $font-size-big;
     font-weight: bold;
+    vertical-align: center;
+    &::before{
+      content: '◆';
+      margin-right: 5px;
+      position: relative;
+      top: calc((#{$font-size-big} - #{$font-size-small})/2);
+      color: $layout-bg-color;
+      font-size: $font-size-big;
+    }
   }
   p{
     line-height: $font-size-small*2;
     margin-bottom: 30px;
-
   }
   ul{
     margin-top: 10px;
@@ -59,12 +72,12 @@
     margin-bottom: 80px;
     border-collapse: collapse;
     th{
-      background-color: #000070;
+      background-color: $layout-bg-color;
       color: white;
       text-align: center;
     }
     th, td{
-      border: solid 1px #000070;
+      border: solid 1px $layout-bg-color;
       padding: 10px;
     }
   }
