fix article style

--- a/public/stylesheets/article.css
+++ b/public/stylesheets/article.css
@@ -1,43 +1,63 @@
 @charset "UTF-8";
-.article-header .date {
+.article {
+  padding-top: 50px;
+  width: 720px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: white;
+}
+
+.article .article-header {
+  width: 640px;
+}
+
+.article .article-header .date {
   font-size: 16px;
 }
 
-.article-header .article-header-title {
+.article .article-header .article-header-title {
   margin: 30px 0;
   font-size: 22px;
   font-weight: bold;
 }
 
-.article-header .article-header-img {
+.article .article-header .article-header-img {
   margin: 0 auto;
-  max-width: 640px;
 }
 
-.article-header .article-header-img img {
+.article .article-header .article-header-img img {
   -o-object-fit: contain;
      object-fit: contain;
 }
 
-.article-header .article-header-img-source {
+.article .article-header .article-header-img-source {
   font-size: 16px;
 }
 
-.article-header p {
+.article .article-header p {
   line-height: 32px;
   margin-bottom: 30px;
 }
 
-.article-content {
+.article .article-content {
+  width: 640px;
   margin: 100px 0;
 }
 
-.article-content a {
+.article .article-content a {
   text-decoration: underline;
   color: blue;
 }
 
-.article-content h2 {
+.article .article-content h2 {
   margin-top: 80px;
   margin-bottom: 30px;
   padding-left: 5px;
@@ -47,7 +67,7 @@
   font-weight: bold;
 }
 
-.article-content h3 {
+.article .article-content h3 {
   margin-bottom: 10px;
   font-size: 16px;
   line-height: 22px;
@@ -55,7 +75,7 @@
   vertical-align: center;
 }
 
-.article-content h3::before {
+.article .article-content h3::before {
   content: '◆';
   margin-right: 5px;
   position: relative;
@@ -64,12 +84,12 @@
   font-size: 22px;
 }
 
-.article-content p {
+.article .article-content p {
   line-height: 32px;
   margin-bottom: 30px;
 }
 
-.article-content ul {
+.article .article-content ul {
   margin-top: 10px;
   margin-bottom: 30px;
   padding: 20px 10px;
@@ -78,24 +98,24 @@
   border: 3px solid #000070;
 }
 
-.article-content table {
+.article .article-content table {
   margin-top: 10px;
   margin-bottom: 80px;
   border-collapse: collapse;
 }
 
-.article-content table th {
+.article .article-content table th {
   background-color: #000070;
   color: white;
   text-align: center;
 }
 
-.article-content table th, .article-content table td {
+.article .article-content table th, .article .article-content table td {
   border: solid 1px #000070;
   padding: 10px;
 }
 
-.article-content span {
+.article .article-content span {
   font-size: 18px;
   font-weight: bold;
   border-bottom: 2px solid #000070;
