--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Noto, "游ゴシック", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif, serif;
+  font-family: "游ゴシック", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif, serif;
   color: black;
   background-color: #f5f5f5;
 }
@@ -17,6 +17,7 @@ body p {
 body img {
   max-width: 100%;
   max-height: 100%;
+  margin: 0 auto;
 }
 
 header {
@@ -42,9 +43,9 @@ header a {
 }
 
 header .header-title {
+  width: calc(100px + 640px + 300px);
   padding: 0 10px;
   height: 100px;
-  width: 1000px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -60,7 +61,7 @@ header .header-title {
 
 @media screen and (max-width: 992px) {
   header .header-title {
-    width: 750px;
+    width: 720px;
   }
 }
 
@@ -104,8 +105,8 @@ header .header-bottom-bar .header-bottom-bar-line {
 }
 
 .contents {
-  width: 1000px;
-  margin: 100px auto;
+  width: calc(100px + 640px + 300px);
+  margin: 50px auto;
   padding: 0 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -117,7 +118,7 @@ header .header-bottom-bar .header-bottom-bar-line {
 
 @media screen and (max-width: 992px) {
   .contents {
-    width: 750px;
+    width: 720px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -128,6 +129,7 @@ header .header-bottom-bar .header-bottom-bar-line {
 @media screen and (max-width: 750px) {
   .contents {
     width: 100%;
+    margin-top: 10px;
     padding: 0 10px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -137,13 +139,13 @@ header .header-bottom-bar .header-bottom-bar-line {
 }
 
 .contents .left-contents {
-  width: 70%;
+  max-width: calc(100px + 640px + 300px);
 }
 
 @media screen and (max-width: 992px) {
   .contents .left-contents {
     margin: 0 auto;
-    width: 750px;
+    width: 720px;
   }
 }
 
@@ -155,7 +157,7 @@ header .header-bottom-bar .header-bottom-bar-line {
 }
 
 .contents .right-contents {
-  width: 30%;
+  width: 300px;
   margin-left: 3%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -173,7 +175,7 @@ header .header-bottom-bar .header-bottom-bar-line {
   .contents .right-contents {
     padding: 0;
     margin: 0 auto;
-    width: 750px;
+    width: 720px;
   }
 }
 
