--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -5,7 +5,7 @@
 }
 
 body{
-  font-family: Noto, "游ゴシック", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif, serif;
+  font-family: "游ゴシック", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif, serif;
   color: $font-color;
   background-color: #f5f5f5;
   p{
@@ -14,6 +14,7 @@ body{
   img{
     max-width: 100%;
     max-height: 100%;
+    margin: 0 auto;
   }
 }
 
@@ -29,9 +30,9 @@ header{
     color: $font-color;
   }
   .header-title{
+    width: $content-size-pc;
     padding: 0 10px;
     height: 100px;
-    width: $content-size-pc;
     display: flex;
     flex-direction: column;
     justify-content: end;
@@ -69,7 +70,7 @@ header{
 
 .contents{
   width: $content-size-pc;
-  margin: 100px auto;
+  margin: 50px auto;
   padding: 0 10px;
   display: flex;
   justify-content: center;
@@ -79,11 +80,12 @@ header{
   }
   @media screen and (max-width: $breakpoint-sp){
     width: 100%;
+    margin-top: 10px;
     padding: 0 10px;
     flex-direction: column;
   }
   .left-contents{
-    width: 70%;
+    max-width: $content-size-pc;
     @media screen and (max-width: $breakpoint-tab){
       margin: 0 auto;
       width: $content-size-tab;
@@ -94,7 +96,7 @@ header{
     }
   }
   .right-contents{
-    width: 30%;
+    width: 300px;
     margin-left: 3%;
     display: flex;
     flex-direction: column;
