--- a/public/stylesheets/variable.scss
+++ b/public/stylesheets/variable.scss
@@ -1,8 +1,9 @@
 // Sass変数一覧-----------------------------------------------
-$content-size-pc: 1000px;             //レスポンシブ対応　デスクトップ用
+$content-size-pc: calc(100px + 640px + 300px);             //レスポンシブ対応　デスクトップ用
 $breakpoint-tab: 992px;               //レスポンシブ対応　タブレット(ラップトップ）
-$content-size-tab: 750px;            //レスポンシブ対応　幅サイズ
+$content-size-tab: 720px;            //レスポンシブ対応　幅サイズ
 $breakpoint-sp: 750px;                //レスポンシブ対応　スマホ
+$main-content-size: 700px;
 $layout-bg-color: rgba(0,0,112,1);  //ブログのテーマ色
 $content-bg-color: white;
 $font-color: black;
