--- a/public/stylesheets/article.scss
+++ b/public/stylesheets/article.scss
@@ -48,6 +48,7 @@
       font-weight: bold;
     }
     h3{
+      margin-top: 80px;
       margin-bottom: 10px;
       font-size: $font-size-small;
       line-height: $font-size-big;
@@ -64,7 +65,7 @@
     }
     p{
       line-height: $font-size-small*2;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
     ul{
       margin-top: 10px;
