--- a/public/stylesheets/article.css
+++ b/public/stylesheets/article.css
@@ -67,6 +67,7 @@
 }
 
 .article .article-content h3 {
+  margin-top: 80px;
   margin-bottom: 10px;
   font-size: 16px;
   line-height: 22px;
@@ -85,7 +86,7 @@
 
 .article .article-content p {
   line-height: 32px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .article .article-content ul {
