--- a/public/stylesheets/article.scss
+++ b/public/stylesheets/article.scss
@@ -34,6 +34,7 @@
   
   .article-content{
     width: 640px;
+    word-break: break-all;
     a{
       text-decoration: underline;
       color: blue;
