--- a/public/stylesheets/article.scss
+++ b/public/stylesheets/article.scss
@@ -1,12 +1,13 @@
 @import "variable"; //変数の読み込み
 
 .article{
-  padding: 50px;
-  width: $main-content-size;
+  padding: 50px 0;
+  max-width: $main-content-size;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; 
   background-color: $content-bg-color;
+  word-break: break-all;
   .article-header{
     width: 640px;
     .date{
@@ -33,8 +34,7 @@
   }
   
   .article-content{
-    width: 640px;
-    word-break: break-all;
+    max-width: 640px;
     a{
       text-decoration: underline;
       color: blue;
