--- a/public/stylesheets/article.css
+++ b/public/stylesheets/article.css
@@ -16,6 +16,18 @@
   word-break: break-all;
 }
 
+@media screen and (max-width: 992px) {
+  .article {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .article {
+    width: 100%;
+  }
+}
+
 .article .article-header {
   width: 640px;
 }
@@ -50,6 +62,18 @@
 
 .article .article-content {
   max-width: 640px;
+}
+
+@media screen and (max-width: 992px) {
+  .article .article-content {
+    max-width: 640px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .article .article-content {
+    width: 100%;
+  }
 }
 
 .article .article-content a {
