--- a/public/stylesheets/article.css
+++ b/public/stylesheets/article.css
@@ -25,11 +25,12 @@
 @media screen and (max-width: 750px) {
   .article {
     width: 100%;
+    padding: 30px 10px;
   }
 }
 
 .article .article-header {
-  width: 640px;
+  max-width: 640px;
 }
 
 .article .article-header .date {
@@ -64,18 +65,6 @@
 
 .article .article-content {
   max-width: 640px;
-}
-
-@media screen and (max-width: 992px) {
-  .article .article-content {
-    max-width: 640px;
-  }
-}
-
-@media screen and (max-width: 750px) {
-  .article .article-content {
-    width: 100%;
-  }
 }
 
 .article .article-content a {
