--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -130,7 +130,7 @@ header .header-bottom-bar .header-bottom-bar-line {
   .contents {
     width: 100%;
     margin-top: 10px;
-    padding: 0 10px;
+    padding: 0;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
