--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -81,7 +81,7 @@ header{
   @media screen and (max-width: $breakpoint-sp){
     width: 100%;
     margin-top: 10px;
-    padding: 0 10px;
+    padding: 0;
     flex-direction: column;
   }
   .left-contents{
