--- a/public/stylesheets/article.css
+++ b/public/stylesheets/article.css
@@ -30,6 +30,7 @@
 }
 
 .article .article-header {
+  width: 100%;
   max-width: 640px;
 }
 
@@ -64,6 +65,7 @@
 }
 
 .article .article-content {
+  width: 100%;
   max-width: 640px;
 }
 
