--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -139,7 +139,7 @@ header .header-bottom-bar .header-bottom-bar-line {
 }
 
 .contents .left-contents {
-  max-width: 720px;
+  width: 720px;
 }
 
 @media screen and (max-width: 992px) {
