--- a/views/manage/article.ejs
+++ b/views/manage/article.ejs
@@ -36,7 +36,7 @@
   <!-- article-content -->
   <div class="form-group">
     <label for="body">記事本文</label>
-    <textarea name="body" id="body" rows="30"><%= form.body %></textarea>
+    <textarea name="body" id="body editor" rows="30"><%= form.body %></textarea>
   </div>
 
   <!-- 送信ボタン -->
