--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,6 +16,10 @@
       console.log('googleanalitics start!!!!')
     </script>
 
+    <!-- editor.js関係（textareaをエディタにするぱっけーじ） -->
+    <script src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
+
+
     <link rel="stylesheet" href="/stylesheets/reset.css" />
     <link rel="stylesheet" href="/stylesheets/layout.css" />
     <link rel='stylesheet' href='/stylesheets/index.css' />
@@ -54,12 +58,6 @@
       <p>©2022.04.12 All right reserve</p>
     </footer>
 
-    <!-- react関係読み込み ------------------------------------------------------------------------------------->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    
-    <!-- reactコンポーネント -->
     
   </body>
 </html>
