--- a/public/stylesheets/manage.css
+++ b/public/stylesheets/manage.css
@@ -9,6 +9,17 @@ form .form-group {
           flex-direction: column;
 }
 
+form .form-group select {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 5px 10px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: bold;
+}
+
 form .form-group input, form .form-group textarea {
   width: 100%;
   padding: 5px 10px;
