--- a/public/stylesheets/manage.scss
+++ b/public/stylesheets/manage.scss
@@ -12,6 +12,14 @@ form{
     //   padding: 0 10px;
     //   text-align: center;
     // }
+    select{
+      width: fit-content;
+      padding: 5px 10px;
+      border: 1px solid #000;
+      border-radius: 5px;
+      text-align: center;
+      font-weight: bold;
+    }
     input, textarea{
       width: 100%;
       padding: 5px 10px;
